<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context=".ui.base.OnBoardingActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/f1Logo"
        android:layout_width="@dimen/default_view_pager_image_size_188"
        android:layout_height="@dimen/default_image_size_96dp"
        android:layout_marginTop="@dimen/margin_56"
        android:src="@drawable/f1logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background2"
        android:layout_width="@dimen/default_image_size_144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="@dimen/margin_64"
        android:src="@drawable/ic_on_board_2"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1Logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background1"
        android:layout_width="@dimen/default_view_pager_image_size_212"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_102"
        android:layout_marginBottom="@dimen/margin_36"
        android:src="@drawable/ic_on_board_1"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/f1Logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="@dimen/default_view_pager_image_size_212"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_48"
        android:src="@drawable/ic_on_board"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1Logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_92"
        android:fontFamily="@font/orbitron_semibold"
        android:maxLines="2"
        android:paddingTop="@dimen/padding_8"
        android:text="@string/str_app_welcome"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1Logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_48"
        android:ellipsize="end"
        android:fontFamily="@font/syncopate_regular"
        android:maxLines="2"
        android:text="@string/str_welcome_description1"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_10"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeSlogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:ellipsize="end"
        android:fontFamily="@font/syncopate_regular"
        android:maxLines="2"
        android:text="@string/str_welcome_description2"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_10"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_92"
        android:background="@drawable/curve_primary"
        android:padding="@dimen/padding_16"
        android:text="@string/str_lets_lock_in"
        android:fontFamily="@font/exo2_italic"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeSlogan" />


</androidx.constraintlayout.widget.ConstraintLayout>